# supervclimso

./: .cproject  .project  AUTHORS  Doxyfile  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  autotroll.mk  config.h  config.h.in  config.status  configure  configure.ac  configure.in  configure.in.in  libtool  supervclimso.kdevelop  supervclimso.kdevelop.pcs  supervclimso.kdevses
CertificatsClesPrivees/: CertificatClientSupervCLIMSO.pem  ClePriveeClientSupervCLIMSO.pem  RequeteCertificatClientSupervCLIMSO.pem  lignes.txt
autom4te.cache/: output.1  requests  traces.0  traces.1
m4/: autotroll.m4
src/: IconAcquisitionsPosesImages.xpm  IconC1Actif.xpm  IconC1Inactif.xpm  IconC2Actif.xpm  IconC2Inactif.xpm  IconConsignes-Actif.xpm  IconConsignes-Inactif.xpm  IconFiltreC2-10747-Actif.xpm  IconFiltreC2-10747-Inactif.xpm  IconFiltreC2-10770-Actif.xpm  IconFiltreC2-10770-Inactif.xpm  IconFiltreC2-10798-Actif.xpm  IconFiltreC2-10798-Inactif.xpm  IconFiltreC2-10830-Actif.xpm  IconFiltreC2-10830-Inactif.xpm  IconL1Actif.xpm  IconL1Inactif.xpm  IconL2Actif.xpm  IconL2Inactif.xpm  IconModeCalibrationActif.xpm  IconModeCalibrationInactif.xpm  IconModeInitialisationActif.xpm  IconModeInitialisationInactif.xpm  IconModeObservationActif.xpm  IconModeObservationInactif.xpm  IconModePLUActif.xpm  IconModePLUInactif.xpm  IconModePointageActif.xpm  IconModePointageInactif.xpm  IconPoseBias.xpm  IconPoseDark.xpm  IconPoseImage.xpm  IconPosesBias.xpm  IconPosesDark.xpm  IconSupprDerImgC1.xpm  IconSupprDerImgC2.xpm  IconSupprDerImgL1.xpm  IconSupprDerImgL2.xpm  IconTransfertBASS2000C1.xpm  IconTransfertBASS2000C2.xpm  (+35 more)
src/.deps/: WidgetPoseCentrage.Po  WidgetPoseImage.Po  WidgetRoueFiltresC2.Po  WidgetRoueOuvertureCLIMSO.Po  WidgetSoleilHeliographique.Po  calculsastronomiques.Po  main.Po  pointscomm.Po  supervclimso-WidgetPoseCentrage.Po  supervclimso-WidgetPoseCentrage.moc.Po  supervclimso-WidgetPoseImage.Po  supervclimso-WidgetPoseImage.moc.Po  supervclimso-WidgetRoueFiltresC2.Po  supervclimso-WidgetRoueFiltresC2.moc.Po  supervclimso-WidgetRoueOuvertureCLIMSO.Po  supervclimso-WidgetRoueOuvertureCLIMSO.moc.Po  supervclimso-WidgetSoleilHeliographique.Po  supervclimso-WidgetSoleilHeliographique.moc.Po  supervclimso-calculsastronomiques.Po  supervclimso-main.Po  supervclimso-pointscomm.Po  supervclimso-supervclimso.Po  supervclimso-supervclimso.moc.Po  supervclimso.Po
